[package]
name = "aion"
version = "0.1.0"
authors = ["olaf <o_van_wijk@hotmail.com>"]

[dependencies]
zmq = "0.9.1"
actix-web = "1.0.7"
riker = "0.3.1"
reqwest = "0.9.22"
iota-lib-rs = "0.4"
lazy_static = "1.4.0"
hocon = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
rocksdb = "0.12.4"
lru-cache = "0.1.2"
log = "0.4"

env_logger = { version = "0.7"}

[dev-dependencies]