[package]
name = "aion"
version = "0.1.0"
authors = ["olaf <o_van_wijk@hotmail.com>"]
edition = "2018"
[dependencies]
zmq = "0.9.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
riker = "0.3.2"
futures = "^0.3"
sha2 = "0.8.1"
async-std = "1.0.0"
tokio = "*"

#riker-patterns = "^0.3.0"
reqwest = {version = "^0.10.1",  features = ["blocking"]} 
iota-lib-rs = { git = "https://github.com/ovanwijk/iota.rs", branch = "master" } #"0.4.1"
lazy_static = "1.4.0"
hocon = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
base64 = "*"
failure = "0.1"
rocksdb = "0.12.4"
lru-cache = "0.1.2"
log = "0.4"
petgraph = "0.5.0"
#bincode = "1.2.0"

env_logger = { version = "0.7"}
surf = { version = "*", default-features = false, features = ["native-client"] } # , "middleware-logger"
[features]
vendored-zmq = ['zmq/vendored']
[dev-dependencies]